<resources>
    <string name="app_name">GoGrocery Picking</string>
    <string name="txtEmailOrUserName">Email or Username</string>
    <string name="txtPassword">Password</string>
    <string name="txtLogin">Login</string>
    <string name="txtForgotPassword">Forgot Password?</string>
    <string name="txtClickHere">Click Here</string>
    <string name="txtLoginTo">Login to GoGroceryPicking</string>
    <string name="txtStatusToday">Status Today</string>
    <string name="txtHome">Home</string>
    <string name="txtOrders">Orders</string>
    <string name="txtStock">Stock</string>
    <string name="txtStocks">Stocks</string>
    <string name="txtReturn">Return</string>
    <string name="txtReturns">Returns</string>
    <string name="txtTotalOrders">Total Orders</string>
    <string name="txtTotalOrdersExplain">Total Orders (New &amp; Assigned):</string>
    <string name="txtOrders_in_processing">Orders in-processing :</string>
    <string name="txtShippedOrders">Shipped Orders</string>
    <string name="txtInShippedOrders">Orders in-shipping</string>
    <string name="txtProcessedOrders">Processed Orders</string>
    <string name="txtOrderList">Order List</string>
    <string name="txtOrderDetail">Order Details</string>
    <string name="txtScheduled">Scheduled</string>
    <string name="txtAddress">- Address -</string>
    <string name="txtThisOrderAssignTo">- This order is assign to -</string>
    <string name="txtOrderedOn">- Ordered On -</string>
    <string name="txtOrderPreparedBy">Order Prepared by</string>
    <string name="txtOrderNo">Order No :</string>
    <string name="txtOrderStatus">Order Status :</string>
    <string name="txtOrderDateTime">Order date and time :</string>
    <string name="txtCustomerName">Customer Name :</string>
    <string name="txtMobileNumber">Mobile Number :</string>
    <string name="txtCustomerAddress">Customer Address</string>
    <string name="txtViewInMap">View in map</string>
    <string name="txtProductValue">Value of Products</string>
    <string name="txtNewProductValue">New Value of Products</string>
    <string name="txtServiceCharge">Service Charge</string>
    <string name="txtTotalPrice">Total Price</string>
    <string name="txtPaymentMethod">Payment Method</string>
    <string name="txtItems">Items</string>
    <string name="txtPrice">Price :</string>
    <string name="txtUnitPrice">Unit Price :</string>
    <string name="txtTotalPricee">Total Price :</string>
    <string name="txtOrderedQty">Ordered Qty :</string>
    <string name="txtAvailable">Available</string>
    <string name="txtNotAvailable">Not Available</string>
    <string name="txtSubstituteProductFor">Substitute Product for</string>
    <string name="txtAddedQty">Added Qty :</string>
    <string name="txtSendForApproval">Send for Approval</string>
    <string name="txtApprovalDesc">Send Replacement request to customer for approval</string>
    <string name="txtWaitDesc">Please wait for customer confirmation for 10 min</string>
    <string name="txtApproveDesc">Replacement request has been approved by \n the customer</string>
    <string name="txtProcessTheOrder">Process the order</string>
    <string name="txtAddSubstituteProduct">Add Substitute Product</string>
    <string name="txtSearchForProduct">Search for product</string>
    <string name="txtProductInfo">Product Info</string>
    <string name="txtPricee">Price</string>
    <string name="txtNoData">Product Not Found</string>
    <string name="txtAddProducts">Add Products</string>
    <string name="txtManageStock">Manage Stock</string>
    <string name="txtSearch">Search</string>
    <string name="txtEdit">Edit</string>
    <string name="txtEditProductPrice">Edit Product Price</string>
    <string name="txtUpdatePrice">Update Price</string>
    <string name="txtProductPrice">Product Price</string>
    <string name="txtOfferPrice">Offer Price</string>
    <string name="txtSetProductPrice">Set Product Price</string>
    <string name="txtProductReturn">Product Return</string>
    <string name="txtDate">Date</string>
    <string name="txtOrderNumber">Order Number</string>
    <string name="txtShopBillNumber">Shop Bill Number</string>
    <string name="txtProductName">Product Name</string>
    <string name="txtProduct">Product</string>
    <string name="txtBarcode">Barcode</string>
    <string name="txtOrderSummary">Order Summary</string>
    <string name="txtSubtotal">Subtotal</string>
    <string name="txtDeliveryFee">Delivery Fee</string>
    <string name="txtAdditionalFee">Additional Fee</string>
    <string name="txtEstimatedTax">Estimated Tax</string>
    <string name="txtConfirmReturn">Confirm Return</string>
    <string name="txtAddMore">Add More</string>
    <string name="txtCantEmpty">can not be empty</string>
    <string name="txtNotValid">Not valid</string>
    <string name="txtNetworkNotAvailable">Network not available</string>
    <string name="txtLoading">Loading</string>
    <string name="txtEditProductWeight">Edit Product Weight</string>
    <string name="txtWeight">Weight</string>
    <string name="txtNewPrice">New Price</string>
    <string name="txtNotes">Notes</string>
    <string name="txtEmail">Email</string>
    <string name="txtLogout">Logout</string>
    <string name="txtResetPassword">Reset Password</string>
    <string name="txtConfirmPassword">Confirm Password</string>
    <string name="txtReset">Reset</string>
    <string name="txtOTP">OTP</string>
    <string name="txtAnd">and</string>
    <string name="txtNotMatched">not matched</string>
    <string name="txtPwdLengthError">length should greater that 6</string>
    <string name="txtPending">New</string>
    <string name="txtPendingLbl">New :</string>
    <string name="txtProcessing">Processing</string>
    <string name="txtInProcessing">Assigned</string>
    <string name="txtInProcessingLbl">Assigned :</string>
    <string name="txtHoursAgo">hours ago</string>
    <string name="txtDay">day</string>
    <string name="txtAddNewProduct">Add New Product</string>
    <string name="txtScan">Scan</string>
    <string name="txtLatLongNotAvailable">Lat-Long not available</string>
    <string name="txtPickingNotComplete">Picking not completed yet</string>
    <string name="txtResendOTP">Resend OTP</string>
    <string name="txtSelectProductToAdd">Select product to add</string>
    <string name="txtSelectCategory">Select Category</string>
    <string name="txtCategory">Category</string>
    <string name="txtInStock">In Stock</string>
    <string name="txtEnterOrderNumber">Enter Order Number</string>
    <string name="txtQty">Qty</string>
    <string name="txtOrder">Order</string>
    <string name="txtHasPrice">Has Price</string>
    <string name="txtEditPrice">Edit Price</string>
    <string name="txtEnterQuantity">Enter Quantity</string>
    <string name="txtSubstituteProductError">Substitute quantity must be within</string>
    <string name="txtSKU">SKU</string>
    <string name="txtEditProductStock">Edit Product Stock</string>
    <string name="txtSetProductStock">Set Product Stock</string>
    <string name="txtOutofStock">Out of Stock</string>
    <string name="txtUpdateStock">Update Stock</string>
    <string name="txtEnterPreparedByName">Enter Prepared By Name</string>
    <string name="txtStockNotAvailable">Stock Not Available</string>
    <string name="txtSubCategory">Sub Category</string>
    <string name="txtReturnQty">Return Qty</string>
    <string name="default_notification_channel_id">com.gogrocery.picking</string>
    <string name="txtDiscount">Discount</string>
    <string name="txtDeliveryCharge">Delivery Charge</string>
    <string name="txtShipped">Shipped</string>
    <string name="txtInShipping">In-Shipping</string>
    <string name="txtSubstituteProduct">Substitute Product</string>
    <string name="txtNotifyCustomer">Notify Customer</string>
    <string name="txtDashboard">Dashboard</string>
    <string name="txtReturnAmount">Return Amount</string>
    <string name="txtPendingOrders">Pending Orders</string>
    <string name="txtProcessingOrders">In-Processing Orders</string>
    <string name="txtDeliveryAddress">Delivery Address</string>
    <string name="txtSubstitute">Substitute</string>
    <string name="txtSelectProduct">Select Product</string>
    <string name="txtSelectedProduct">Selected Product</string>
    <string name="txtEditWeight">Edit Weight</string>
    <string name="txtTotalWeight">Total Weight :</string>
    <string name="txtUnitWeight">Unit Weight :</string>
    <string name="txtCustomerNote">Customer Notes :</string>
    <string name="txtCancelOrders">Cancelled orders</string>
    <string name="txtCancelled">Cancelled</string>
    <string name="txtExpectedDeliveryTime">Expected Delivery Time :</string>
    <string name="txtDeliveryTime">Delivery Time :</string>
    <string name="txtInvoiceNumber">Invoice Number</string>
    <string name="txtEnterPrice">Enter Price</string>
    <string name="txtFinalPrice">Final Price</string>
    <string name="txtShippingCharge">Shipping Charge</string>
    <string name="txtOtherDiscount">Product promotion discount</string>
    <string name="txtShippingDiscount">Coupon Discount</string>
    <string name="txtInSubsOut">Subs. Out</string>
    <string name="txtSubsIn">Subs. In</string>
    <string name="txtSubstitutionSent">Substitutions Sent :</string>
    <string name="txtSubstitutionReceived">Substitutions Received :</string>
    <string name="txtCSV">CSV</string>
    <string name="download_complete">Download Complete</string>
    <string name="txtBillNumber">Bill Number :</string>
    <string name="txtEnterBillNumber">Enter Bill Number</string>
    <string name="txtSave">Save</string>
</resources>
