<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="clickHandler"
            type="com.gogrocery.picking.activity.ResetPwdActivity.ResetPwdClickHandler" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appColorWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/_30sdp"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtResetPassword"
                android:textColor="@color/appColorBlack"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_5sdp"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_20sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etOtpReset"
                    android:hint="@string/txtOTP"
                    android:textSize="@dimen/_9sdp"
                    android:inputType="number"
                    android:maxLength="6"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_5sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etPasswordReset"
                    android:hint="@string/txtPassword"
                    android:textSize="@dimen/_9sdp"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_5sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etConfirmPasswordReset"
                    android:hint="@string/txtConfirmPassword"
                    android:textSize="@dimen/_9sdp"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/txtReset"
                android:textAllCaps="true"
                android:textColor="@color/appColorWhite"
                android:background="@drawable/bg_red_round_corner"
                android:textSize="@dimen/_9sdp"
                android:onClick="@{clickHandler::onResetClicked}"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtResendOTP"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:onClick="@{clickHandler::onResendClicked}"/>
        </LinearLayout>

    </RelativeLayout>
</layout>