<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="clickHandler"
            type="com.gogrocery.picking.activity.LoginActivity.LoginClickHandler" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appColorWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/_30sdp"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp"
            android:gravity="center">
            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/picking_logo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtLoginTo"
                android:textColor="@color/appColorBlack"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_5sdp"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_20sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etUserNameLogin"
                    android:hint="@string/txtEmailOrUserName"
                    android:textSize="@dimen/_9sdp"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="@dimen/_5sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etPasswordLogin"
                    android:hint="@string/txtPassword"
                    android:textSize="@dimen/_9sdp"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/txtLogin"
                android:textAllCaps="true"
                android:textColor="@color/appColorWhite"
                android:background="@drawable/bg_red_round_corner"
                android:textSize="@dimen/_9sdp"
                android:onClick="@{clickHandler::onLoginClicked}"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtForgotPassword"
                    android:textColor="@color/appColorBlack"
                    android:textSize="@dimen/_7sdp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtClickHere"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_7sdp"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:onClick="@{clickHandler::onForgotClicked}"/>

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</layout>